--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   cmv-analyzer:
-    image: cmv-analyzer:latest
+    image: ${IMAGE:-cmv-analyzer}:latest
     networks:
       - network_public
     deploy:
